fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -63,7 +63,9 @@ body {
     background-color: #000;
     font-family: "Inter", sans-serif;
 
-    overflow-x: hidden;
+    max-width: 100vw;
+
+    overflow: hidden;
 }
 
 .title {
